test/extended/testdata/router/bug1826225-proh2-deploy.yaml
apiVersion: v1
kind: List
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: web-server-deploy
    labels:
      name: web-server-deploy
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: web-server-deploy
    template:
      metadata:
        labels:
          name: web-server-deploy
      spec:
        containers:
        - name: nginx
          image: quay.io/openshifttest/nginx-alpine@sha256:04f316442d48ba60e3ea0b5a67eb89b0b667abf1c198a3d0056ca748736336a0
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      name: service-h2c-57001
    name: service-h2c-57001
  spec:
    ports:
    - appProtocol: h2c
      name: h2c
      port: 1110
      protocol: TCP
      targetPort: 8080
    selector:
      name: web-server-deploy
