test/extended/testdata/router/ingresscontroller-hostnetwork-only.yaml
apiVersion: template.openshift.io/v1
kind: Template
objects:
- apiVersion: operator.openshift.io/v1
  kind: IngressController
  metadata:
    name: ${NAME}
    namespace: ${NAMESPACE}
  spec:
    domain: ${DOMAIN}
    replicas: 1
    endpointPublishingStrategy:
      type: HostNetwork
      hostNetwork:
        httpPort:  ${{HTTPPORT}}
        httpsPort: ${{HTTPSPORT}}
        statsPort: ${{STATSPORT}}
parameters:
- name: NAME
- name: NAMESPACE
  value: openshift-ingress-operator
- name: DOMAIN
- name: HTTPPORT
- name: HTTPSPORT
- name: STATSPORT
