test/extended/testdata/router/ingresscontroller-shard.yaml
apiVersion: template.openshift.io/v1
kind: Template
objects:
- apiVersion: operator.openshift.io/v1
  kind: IngressController
  metadata:
    name: ${NAME}
    namespace: ${NAMESPACE}
  spec:
    defaultCertificate:
      name: ${DEFAULT_CERT}
    domain:  ${SHARD}-${DOMAIN}
    replicas: 1
    routeSelector:
      matchLabels:
        shard: ${SHARD}
    endpointPublishingStrategy:
      type: NodePortService
parameters:
- name: NAME
- name: NAMESPACE
  value: openshift-ingress-operator
- name: DEFAULT_CERT
  value: router-certs-default
- name: DOMAIN
- name: SHARD
