test/extended/testdata/router/ocp54998-web-server-rc.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: ReplicationController
  metadata:
    labels:
      name: web-server-rc-54998
    name: web-server-rc-54998
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: web-server-rc-54998
      spec:
        containers:
        - image: quay.io/openshifttest/nginx-alpine@sha256:04f316442d48ba60e3ea0b5a67eb89b0b667abf1c198a3d0056ca748736336a0
          name: nginx
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      name: service-unsecure-54998
    name: service-unsecure-54998
  spec:
    ports:
    - name: http
      port: 27017
      protocol: TCP
      targetPort: 10081
    selector:
      name: web-server-rc-54998
