test/extended/testdata/router/ocp57404-stateful-set.yaml
apiVersion: v1
kind: List
items:
- apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    name: echoenv-sts
  spec:
    selector:
      matchLabels:
        app: echoenv-sts
    replicas: 2
    template:
      metadata:
        labels:
          app: echoenv-sts
      spec:
        terminationGracePeriodSeconds: 10
        containers:
        - name: nginx
          image: quay.io/openshifttest/nginx-alpine@sha256:04f316442d48ba60e3ea0b5a67eb89b0b667abf1c198a3d0056ca748736336a0
          ports:
          - containerPort: 8080
            name: web
- apiVersion: v1
  kind: Service
  metadata:
    name: echoenv-statefulset-service 
    labels:
      app: echoenv-sts
  spec:
    ports:
    - port: 8080
      name: web
    clusterIP: None
    selector:
      app: echoenv-sts
