test/extended/testdata/router/template-web-server-deploy.yaml
apiVersion: template.openshift.io/v1
kind: Template
objects:
  - apiVersion: apps/v1
    kind: Deployment
    metadata:
      name: ${PodLabelName}
      labels:
        name: ${PodLabelName}
    spec:
      replicas: 1
      selector:
        matchLabels:
          name: ${PodLabelName}
      template:
        metadata:
          labels:
            name: ${PodLabelName}
        spec:
          containers:
          - image: quay.io/openshifttest/nginx-alpine@sha256:cee6930776b92dc1e93b73f9e5965925d49cff3d2e91e1d071c2f0ff72cbca29
            name: nginx
  - apiVersion: v1
    kind: Service
    metadata:
      labels:
        name: ${SecSvcLabelName}
      name: ${SecSvcLabelName}
    spec:
      ports:
      - name: https
        port: 27443
        protocol: TCP
        targetPort: 8443
      selector:
        name: ${PodLabelName}
  - apiVersion: v1
    kind: Service
    metadata:
      labels:
        name: ${UnsecSvcLabelName}
      name: ${UnsecSvcLabelName}
    spec:
      ports:
      - name: http
        port: 27017
        protocol: TCP
        targetPort: 8080
      selector:
        name: ${PodLabelName}
parameters:
- name: PodLabelName
  value: web-server-deploy
- name: SecSvcLabelName
  value: service-secure
- name: UnsecSvcLabelName
  value: service-unsecure
