test/extended/testdata/router/test-client-pod-withprivilege.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: hello-pod
  name: hello-pod
spec:
  containers:
  - image: quay.io/openshifttest/nginx-alpine@sha256:04f316442d48ba60e3ea0b5a67eb89b0b667abf1c198a3d0056ca748736336a0
    name: hello-pod
    securityContext:
      privileged: true
    ports:
    - containerPort: 8080
    - containerPort: 8443
