test/extended/testdata/router/testpod-60350.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: testpod-60350
  labels:
    app: testpod-60350
spec:
  containers:
  - name: myapp-container
    image: quay.io/openshifttest/busybox:multiarch
    name: testpod-60350
    command: ['sh', '-c', 'echo The app is running! && sleep 3600']
  dnsPolicy: ClusterFirst
  dnsConfig:
     searches: [8th.com, 9th.com, 10th.com, 11th.com, 12th.com, 13th.com, 14th.com, 15th.com, 16th.com, 17th.com, 18th.com, 19th.com, 20th.com, 21th.com, 22th.com, 23th.com, 24th.com, 25th.com, 26th.com, 27th.com, 28th.com, 29th.com, 30th.com, 31th.com, 32th.com]
