test/extended/testdata/router/testpod-60492.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: testpod-60492
  labels:
    app: testpod-60492
spec:
  containers:
  - name: myapp-container
    image: quay.io/openshifttest/busybox:latest
    name: testpod-60492
    command: ['sh', '-c', 'echo The app is running! && sleep 3600']
  dnsPolicy: ClusterFirst
  dnsConfig:
     searches: [t47x6d4lzz1zxm1bakrmiceb0tljzl9n8r19kqu9s3731ectkllp9mezn7cldozt25nlenyh5jus5b9rr687u2icimakjpyf4rsux3c66giulc0d2ipsa6bpa6dykgd0mc25r1m89hvzjcix73sdwfbu5q67t0c131i1fqne0o7we20ve2emh1046h9m854wfxo0spb2gv5d65v9x2ibuiti7rhr2y8u72hil5cutp63sbhi832kf3v4vuxa0]
