test/extended/testdata/router/web-server-signed-rc.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: nginx-config
  data:
    nginx.conf: |
      events {
          worker_connections 1024;
      }

      http {
          server {
              listen		8080;
              location / {
                  root /data/http;
              }
          }

          server {
              listen           	    8443 ssl http2 default;
              listen           	    [::]:8443 ssl http2 default;
              server_name      	    _;
              ssl_certificate  	    certs/tls.crt;
              ssl_certificate_key  	certs/tls.key;
              location / {
                  root /data/https-default;
              }
          }
      }
- apiVersion: v1
  kind: ReplicationController
  metadata:
    labels:
      name: web-server-rc
    name: web-server-rc
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: web-server-rc
      spec:
        containers:
        - name: nginx
          image: quay.io/openshifttest/nginx-alpine@sha256:f266733786efb10c4353d4b44ada6f22434e983d22f0975d20803f1817d38f56
          volumeMounts:
          - name: service-secret
            mountPath: /etc/nginx/certs/
          - name: nginx-config
            mountPath: /etc/nginx/
        volumes:
        - name: service-secret
          secret:
            secretName: service-secret
        - name: nginx-config
          configMap:
            name: nginx-config
- kind: Service
  apiVersion: v1
  metadata:
      annotations:
          service.beta.openshift.io/serving-cert-secret-name: service-secret
      labels:
          name: service-secure1
      name: service-secure1
  spec:
      ports:
         - name: https
           protocol: TCP
           port: 27443
           targetPort: 8443
      selector:
        name: web-server-rc
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      name: service-unsecure1
    name: service-unsecure1
  spec:
    ports:
    - name: http
      port: 27017
      protocol: TCP
      targetPort: 8080
    selector:
      name: web-server-rc
