test/extended/testdata/router/web-server-v4v6rc.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: ReplicationController
  metadata:
    labels:
      name: web-server-v4v6rc
    name: web-server-v4v6rc
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: web-server-v4v6rc
      spec:
        containers:
        - image: quay.io/openshifttest/nginx-alpine@sha256:04f316442d48ba60e3ea0b5a67eb89b0b667abf1c198a3d0056ca748736336a0
          name: nginx
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      name: service-securev4v6
    name: service-securev4v6
  spec:
    ipFamilyPolicy: PreferDualStack
    ports:
    - name: https
      port: 27443
      protocol: TCP
      targetPort: 8443
    selector:
      name: web-server-v4v6rc
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      name: service-unsecurev4v6
    name: service-unsecurev4v6
  spec:
    ipFamilyPolicy: PreferDualStack
    ports:
    - name: http
      port: 27017
      protocol: TCP
      targetPort: 8080
    selector:
      name: web-server-v4v6rc
